# jug-summer-camp-24

./: .mise.toml  README.md  index.html  package-lock.json  package.json  slides.md
dioxus-wc/: Cargo.toml  Dioxus.toml
dioxus-wc/assets/: main.css
dioxus-wc/src/: counter.css  lib.rs  main.rs
public/: slides.html
rust-wc/: Cargo.toml  bacon.toml
rust-wc/src/: counter.css  glue.js  lib.rs
src/: counter.css  main.ts  style.css
