[package]
name = "dioxus-wc"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2021"

[lib]
# To publish WASM, you need to be dynamic linked
crate-type = ["cdylib", "rlib"]

[dependencies]
# See <https://dioxuslabs.com/>
dioxus = { version = "0.5.6", features = ["web"] }

# See <https://docs.rs/dioxus-web-component/latest/dioxus_web_component/>
dioxus-web-component = "0.3.2"

# Import/Export to WASM
wasm-bindgen = "=0.2.92"

# Tell `rustc` to optimize for small code size.
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
