[package]
name = "rust-wc"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2018"

[lib]
# To publish WASM, you need to be dynamic linked
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["events"] }
# Import/Export to WASM
wasm-bindgen = "=0.2.92"

# Interop with Web API
web-sys = { version = "0.3.69", features = [
  "Element",
  "ShadowRoot",
  "ShadowRootInit",
  "ShadowRootMode",
  "CustomElementRegistry",
  "Window",
  "CustomEvent",
  "CustomEventInit",
] }

[lints.rust]
unused_imports = "allow"

# Tell `rustc` to optimize for small code size.
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
