[package]
name = "rust-wc"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2018"

[lib]
# To publish WASM, you need to be dynamic linked
crate-type = ["cdylib", "rlib"]

[dependencies]
# Import/Export to WASM
wasm-bindgen = "=0.2.92"

# Interop with Web API
web-sys = { version = "0.3.69", features = [
  "Element",
  "ShadowRoot",
  "ShadowRootInit",
  "ShadowRootMode",
  "CustomElementRegistry",
  "Window",
  "CustomEvent",
  "CustomEventInit",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
